--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <h2>Liste des constructeurs</h2>
             <table class="table">
                 <thead>
@@ -16,10 +16,17 @@
                     <tr>
                         <th scope="row"><%=factory.id%></th>
                         <td><%=factory.name%></td>
+                        <td>
+                            <form method="POST" action="/<%=factory.id%>/?_method=DELETE">
+                                <button type="submit" class="btn btn-danger">X</button>
+                            </form>
+                        </td>
                     </tr>
                     <%});%>
                 </tbody>
             </table>
+        </div>
+        <div class="col-md-6">
             <h2>Liste des énergies</h2>
             <table class="table">
                 <thead>
@@ -33,10 +40,41 @@
                     <tr>
                         <th scope="row"><%=energy.id%></th>
                         <td><%=energy.name%></td>
+                        <td>
+                            <form method="POST" action="/<%=energy.id%>/?_method=DELETE">
+                                <button type="submit" class="btn btn-danger">X</button>
+                            </form>
+                        </td>
                     </tr>
                     <%});%>
                 </tbody>
             </table>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Ajouter un constructeur</h2>
+            <form class="form-inline" method="POST" action="/add">
+                <div class="form-group mx-sm-3 mb-2">
+                    <label for="factoryName" class="sr-only">Entrez un nouveau constructeur</label>
+                    <input type="text" class="form-control" id="factoryName" placeholder="Nouveau constructeur"
+                        name="factoryName">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Enregistrer</button>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <h2>Ajouter un carburant</h2>
+            <form class="form-inline" method="POST" action="/add">
+                <div class="form-group mx-sm-3 mb-2">
+                    <label for="energyName" class="sr-only">Entrez un nouveau carburant</label>
+                    <input type="text" class="form-control" id="energyName" placeholder="Nouveau carburant"
+                        name="energyName">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Enregistrer</button>
+            </form>
         </div>
     </div>
 </div>
