--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -17,8 +19,17 @@
                         <th scope="row"><%=factory.id%></th>
                         <td><%=factory.name%></td>
                         <td>
+                            <form action="">
+                                <button type="button" class="btn btn-primary">
+                                    <a href="/">
+                                        <i class="fas fa-pen" style="color: #fff;"></i>
+                                    </a>
+                                </button>
+                            </form>
+                        </td>
+                        <td>
                             <form method="POST" action="/<%=factory.id%>/?_method=DELETE">
-                                <button type="submit" class="btn btn-danger">X</button>
+                                <button type="submit" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </form>
                         </td>
                     </tr>
@@ -33,6 +44,8 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -41,8 +54,17 @@
                         <th scope="row"><%=energy.id%></th>
                         <td><%=energy.name%></td>
                         <td>
+                            <form action="">
+                                <button type="button" class="btn btn-primary">
+                                    <a href="/">
+                                        <i class="fas fa-pen" style="color: #fff;"></i>
+                                    </a>
+                                </button>
+                            </form>
+                        </td>
+                        <td>
                             <form method="POST" action="/<%=energy.id%>/?_method=DELETE">
-                                <button type="submit" class="btn btn-danger">X</button>
+                                <button type="submit" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </form>
                         </td>
                     </tr>
@@ -54,28 +76,79 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <h2>Ajouter un constructeur</h2>
             <form class="form-inline" method="POST" action="/add">
                 <div class="form-group mx-sm-3 mb-2">
-                    <label for="factoryName" class="sr-only">Entrez un nouveau constructeur</label>
-                    <input type="text" class="form-control" id="factoryName" placeholder="Nouveau constructeur"
+                    <label for="factory"></label>
+                    <input type="text" class="form-control" id="factory" placeholder="Nouveau constructeur"
                         name="factoryName">
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">Enregistrer</button>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <h2>Ajouter un carburant</h2>
             <form class="form-inline" method="POST" action="/add">
                 <div class="form-group mx-sm-3 mb-2">
-                    <label for="energyName" class="sr-only">Entrez un nouveau carburant</label>
-                    <input type="text" class="form-control" id="energyName" placeholder="Nouveau carburant"
+                    <label for="energy"></label>
+                    <input type="text" class="form-control" id="energy" placeholder="Nouveau carburant"
                         name="energyName">
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">Enregistrer</button>
             </form>
         </div>
+        <div class="col-md-4">
+            <h2>Ajouter une image</h2>
+            <form encType="multipart/form-data" method="POST" action="/addFile">
+                <div class="form-group">
+
+                    <input type="text" class="form-control" name="name">
+                    <input type="file" class="form-control-file" id="image" name="image">
+
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Ajouter</button>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <img src="images/header.jpg" class="d-block w-100" alt="">
+                    </div>
+                    <% cars.forEach(function(car) {%>
+                    <div class="carousel-item">
+                        <img src="<%=car.image%>" class="d-block w-100" alt="<%=car.image%>">
+                    </div>
+                    <%});%>
+                </div>
+
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <% cars.forEach(function(car) {%>
+        <div class="col-md-3">
+            <h5><%=car.name%></h5>
+            <img src="<%=car.image%>" alt="<%=car.image%>" class="img-thumbnail">
+        </div>
+        <%});%>
     </div>
 </div>
 
